# afarinsene-cocoa-ai

./: .env.example  .gitignore  README.md  github_profile_README.md  pyproject.toml  requirements.txt
afarinsene/: __init__.py
afarinsene/data/: augmentation.py  loader.py  preprocessor.py
afarinsene/evaluation/: evaluator.py
afarinsene/export/: exporter.py
afarinsene/models/: cnn.py
afarinsene/training/: trainer.py
afarinsene/utils/: config.py  logger.py  memory.py
configs/: default.yaml  experiment_224.yaml
docs/: architecture.md
scripts/: export_tflite.py  predict.py  train.py
tests/: test_data.py  test_export.py  test_model.py
