[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "afarinsene"
version = "1.0.0"
description = "End-to-end deep learning pipeline for Cocoa Swollen Shoot Virus detection"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "KNUST Geomatic Engineering", email = "author@example.com" }
]
keywords = [
    "cocoa", "CSSVD", "plant disease", "deep learning",
    "TFLite", "Ghana", "Côte d'Ivoire"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
requires-python = ">=3.9"

dependencies = [
    "tensorflow>=2.12,<2.17",
    "numpy>=1.23",
    "scikit-learn>=1.2",
    "Pillow>=9.0",
    "opencv-python-headless>=4.7",
    "matplotlib>=3.6",
    "seaborn>=0.12",
    "PyYAML>=6.0",
    "psutil>=5.9",
    "imageio>=2.28",
]

[project.optional-dependencies]
dev = [
    "black>=23.0",
    "ruff>=0.1",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "rich>=13.0",
    "ipykernel",
    "nbformat",
]

[project.scripts]
afarinsene-train   = "scripts.train:main"
afarinsene-predict = "scripts.predict:main"
afarinsene-export  = "scripts.export_tflite:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["afarinsene*"]

# ---------------------------------------------------------------------------
# Tool configuration
# ---------------------------------------------------------------------------

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["afarinsene"]
omit = ["tests/*", "scripts/*"]
